name:                creepy-spork
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jpvillaisaza/creepy-spork
license:             BSD3
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     CreepySpork
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.7 && < 2.9
  default-language:    Haskell2010

test-suite creepy-spec
  type:                exitcode-stdio-1.0
  main-is:             CreepySpec.hs
  build-depends:       base
                     , creepy-spork
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jpvillaisaza/creepy-spork
